--- a/src/app/Components/CSS/header.css
+++ b/src/app/Components/CSS/header.css
@@ -1,24 +1,25 @@
 .logo--gradient{
     background: -webkit-linear-gradient(#92c475,#54ad91);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    width: fit-content;
+    -webkit-text-fill-color: transparent;;
+    line-height: 100%;
     
 }
 
 .home--logo{
-    font-size: 13rem;
-    line-height: 123px;
-    height: 150px;
+    font-size: 7rem;
+    line-height: 100%;
 
 }
+
+
 
 .home-button{
     border: 1px solid #92c475;
     border-radius: 5px;
     color: white;
-    padding: 10px;
-    width: 150px;
+    padding: 8px;
+    width: 120px;
     font-size: 1rem;
     transition: background-color 0.2s ease-in-out, border 0.2s ease-in-out;
 }
@@ -27,4 +28,24 @@
 .home-button:hover{
     background-color:#54ad91 ;
     border: none;
+}
+
+
+@media (min-width:768px) {
+    .home-button{
+        width: 150px;
+    }
+    .home--logo{
+        font-size: 12rem;
+        line-height: 100%;
+        
+        
+    }
+}
+
+@media (min-width:1024px) {
+    .home--logo{
+        font-size: 14rem;
+        line-height: 100%;
+    }
 }
